# radspion

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  redeploy.sh  requirements.txt
.cursor/rules/: python-venv.mdc
.github/workflows/: acceptance_tests.yml  redeploy.yml  static_analysis.yml  unit_tests.yml
content/: README.md  welcome.md
content/samples/: README.md
deploy/: radspion.service  sudoers-radspion
deploy/nginx/: radspion.conf
docs/: README.md  api.yaml  dev.md  mission-markdown.md
docs/design/: 01-overview.md  02-entities.md  03-database-schema.md  04-example-data-walkthrough.md  05-example-class.md  05-example-storyline.md  05-testing-storyline.md  06-agent-experience.md  07-operator-setup.md  08-example-activity-data.md  context.md  use-cases.md
docs/missions/: README.md  authoring-guide.md  mission-markdown.md
docs/ui/: COLOR_USAGE.md  README.md  activity.html  agent-dashboard-alice.html  (+25 more)
scripts/: add_clearance.sh  bind_dev_email.sh  bootstrap_sample_class.sh  create_empty_db.sh  create_test_db.sh  generate_storyline_sql.py  scope_latex_css.py  seed_storyline.sh  setup_deploy_group.sh  validate_pack_sql.py
tests/: conftest.py  db_fixtures.py  helpers.py  test_activity.py  test_agent_dashboard.py  test_api_access.py  test_api_clearance.py  test_api_codename.py  test_api_submit.py  test_api_unlock.py  test_app.py  test_auth.py  test_clearance_route.py  test_config.py  test_content_files.py  test_db_clearance.py  test_db_mission_detail.py  test_db_storage.py  test_db_submit.py  test_db_submit_data.py  test_db_unlock.py  test_db_users.py  test_delete_storyline.py  test_google_oauth.py  test_guards.py  test_launch.py  test_link_route.py  test_markdown_collapsible.py  test_markdown_render.py  test_markdown_themes.py  test_mission_detail.py  test_mission_sync.py  test_missions.py  test_pack_sql_validation.py  test_personnel.py  test_preview.py  test_project_paths.py  test_radspion.py  test_radspion_auth.py  test_seed_content.py  (+6 more)
(+158 files in other folders)
